# kata

./: README.md  coverage.sh  setup.CodeLite.Default.Native.Debug.sh  setup.Coverage.Default.Native.Debug.sh
Cpp/: README.md  coverage.sh
Cpp/Source/: CMakeLists.txt
Cpp/Source/ChristmasTree.Lib/source/: ChristmasTree.cpp
Cpp/Source/ChristmasTree.Test/source/: ChristmasTreeTest.cpp
Cpp/Source/RefactorFunction.Lib/: CMakeLists.txt
Cpp/Source/RefactorFunction.Lib/source/: Sophisticated.cpp
Cpp/Source/RefactorFunction.Test/: CMakeLists.txt
Cpp/Source/RefactorFunction.Test/source/: RefactorFunctionTest.cpp  RefactorMethodTest.cpp
Source/: CMakeLists.txt
Source/Battleship.Lib/include/: Battleship.h  CConfiguration.h  CCoordinate.h  CGame.h  IShip.h  Utility.h
Source/Battleship.Lib/source/: Battleship.cpp  CCoordinate.cpp  CGame.cpp  IShip.cpp
Source/Battleship.Test/: CMakeLists.txt
Source/Battleship.Test/source/: BattleshipTest.cpp
Source/Calendar.Lib/include/: Calendar.h
Source/Calendar.Lib/source/: Calendar.cpp
Source/Calendar.Test/: CMakeLists.txt
Source/Calendar.Test/source/: CalendarTest.cpp
Source/ChristmasTree.Lib/: CMakeLists.txt
Source/ChristmasTree.Lib/include/: ChristmasTree.h
Source/ChristmasTree.Lib/source/: ChristmasTree.cpp
Source/ChristmasTree.Test/: CMakeLists.txt
Source/Mandelbrot.Lib/include/: Mandelbrot.h
Source/Mandelbrot.Lib/source/: Mandelbrot.cpp
Source/Mandelbrot.Test/: CMakeLists.txt
Source/Mandelbrot.Test/source/: MandelbrotTest.cpp  main.cpp
Source/Minesweeper.Lib/include/: Minesweeper.h
Source/Minesweeper.Lib/source/: Minesweeper.cpp
Source/Minesweeper.Test/: CMakeLists.txt
Source/Minesweeper.Test/source/: MinesweeperTest.cpp
Source/RefactorFunction.Lib/include/: Sophisticated.h
